[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version="1.0.228", features=["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version="0.3.82", features=["Window", "Document", "Element", "Node", "HtmlCanvasElement", "CanvasRenderingContext2d", "EventTarget", "Event", "MouseEvent", "ImageData", "HtmlButtonElement", "HtmlParagraphElement", "console", "RequestInit", "RequestMode", "Request", "Response"] }
