[package]
name = "rust_frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.105"
web-sys = { version="0.3.82", features=["Window", "Document", "Element", "Node", "HtmlCanvasElement", "CanvasRenderingContext2d", "EventTarget", "Event", "MouseEvent", "ImageData", "HtmlButtonElement", "HtmlParagraphElement"] }
